--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   </head>
   
   <body>
+    <img
+         https://avatars.githubusercontent.com/u/82274072?v=4
+         
     Hello there, awesome person!
   </body>
 </html>
