--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <h1>
       crazy
     </h1>
+    <img
+         https://avatars.githubusercontent.com/u/82274072?v=4
+         
     Hello there, awesome person!
   </body>
 </html>
