--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   
   <body>
-    <img
+    <img>
          https://avatars.githubusercontent.com/u/82274072?v=4
          
     Hello there, awesome person!
