--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   </head>
   
   <body>
-    <img>
-         https://avatars.githubusercontent.com/u/82274072?v=4
+    <img https://avatars.githubusercontent.com/u/82274072?v=4>
          
     Hello there, awesome person!
   </body>
