--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <img src="https://avatars.githubusercontent.com/u/82274072?v=4">
     
     <ol>
-      <li>github</li>
-      <li>alexa</li>
-      <li>amazon</li>
-      <li>youtube</li>
+      <li><a href="https://github.com">github</a></li>
+      <li><a href="https://www.alexa.com/">alexa</a></li>
+      <li><a href="https://www.amazon.com/">amazon</a></li>
+      <li><a href="https://www.youtube.com/">youtube</a></li>
     </ol>
     Hello there, awesome person!
   </body>
